--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,37 @@
 * {
-	box-sizing: border-box;  
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-	font-size: 1rem;
-overflow-y: scroll;
+  font-size: 1rem;
+  overflow-y: scroll;
 }
 
 body {
-	margin: 0;
-	font: 300 11px/1.4 'Helvetica Neue', sans-serif;
-	color: white;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	background: white;
-	/* overflow: hidden; */
-	/* display: block; */
-	background-color: #0B0C10;
+  margin: 0;
+  color: white;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-image: url("./assets/pictures/landingPage/landingPageBackground.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+h1 {
+  font-family: "Libre Baskerville", serif;
+}
+
+.bold {
+  font-family: "Libre Baskerville", serif;
+  font-weight: bold;
+}
+.cursive {
+  font-family: "Libre Baskerville", serif;
+  font-style: italic;
 }
 p {
-	font-size: 14px;
+  font-size: 16px;
+  font-family: "Libre Baskerville", serif;
 }
