--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,47 @@ p {
   font-size: 16px;
   font-family: "Libre Baskerville", serif;
 }
+/* Popup style */
+.popup-box {
+  position: fixed;
+  /*background: rgba(27, 27, 94, 0.7);*/
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  z-index: 4;
+}
+
+.box {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30%;
+  margin: 0 auto;
+  height: auto;
+  max-height: 70vh;
+  margin-top: calc(100vh - 85vh - 20px);
+  background: #fff;
+  border-radius: 4px;
+  padding: 20px;
+  border: 3px solid #15104a;
+  overflow: auto;
+}
+
+.close-icon {
+  content: "x";
+  cursor: pointer;
+  /*  position: relative;*/
+  position: fixed;
+  right: calc(50% - 230px);
+  top: calc(100vh - 85vh);
+  background: #15104a;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  line-height: 20px;
+  text-align: center;
+  border: 1px solid #999;
+  font-size: 20px;
+}
