--- a/src/index.css
+++ b/src/index.css
@@ -36,10 +36,19 @@ p {
   font-size: 16px;
   font-family: "Libre Baskerville", serif;
 }
+.svg {
+  fill: #ffffff;
+  stroke: #ffffff;
+}
+.svg:hover {
+  fill: #f5a100;
+  stroke: #f5a100;
+}
 /* Popup style */
 .popup-box {
   position: fixed;
-  /*background: rgba(27, 27, 94, 0.7);*/
+  z-index: 6;
+  background: rgba(27, 27, 94, 0.7);
   width: 100%;
   height: 100vh;
   top: 0;
@@ -79,4 +88,19 @@ p {
   text-align: center;
   border: 1px solid #999;
   font-size: 20px;
+}
+
+/* a:hover > svg * { */
+svg:hover {
+  fill: #f5a100;
+  stroke: #f5a100;
+}
+.contact {
+  cursor: pointer;
+}
+.contact:hover {
+  text-align: center;
+  color: #f5a100;
+  transition: 0.5s ease-in-out;
+  transform: scale(2);
 }
