--- a/src/index.css
+++ b/src/index.css
@@ -61,7 +61,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 30%;
+  width: 500px;
   margin: 0 auto;
   height: auto;
   max-height: 70vh;
@@ -76,18 +76,19 @@ p {
 .close-icon {
   content: "x";
   cursor: pointer;
-  /*  position: relative;*/
-  position: fixed;
-  right: calc(50% - 230px);
-  top: calc(100vh - 85vh);
+  position: relative;
+  /*  position: fixed;*/
+  right: calc(50% - 630px);
+  top: calc(100vh - 100vh);
   background: #15104a;
-  width: 25px;
-  height: 25px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   line-height: 20px;
   text-align: center;
   border: 1px solid #999;
-  font-size: 20px;
+  font-size: 40px;
+  padding-top: 5px;
 }
 
 /* a:hover > svg * { */
@@ -116,11 +117,22 @@ svg:hover {
 .selected-page link:hover {
   color: #15104a;
 }
+
 @media screen and (max-width: 645px) {
   .selected-page {
     display: none;
     display: hidden;
     width: 0px;
+  }
+}
+@media screen and (max-width: 550px) {
+  .box {
+    width: 95%;
+  }
+  .close-icon {
+    position: relative;
+    left: 0px;
+    top: calc(100vh - 100vh);
   }
 }
 
